<resources>

    <string name="app_name">OCRTools</string>    
    <string name="menu_settings_1">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
    <!-- Error -->
    <string name="String_error_dir">Error: Creation of Directory on sdcard failed at</string>
    <string name="String_success">The process is completed</string>
    <string name="String_fail">The process is failed</string>
    <string name="picturehandler_checksdcard">Error creating media file, check SDcard</string>
    <string name="picturehandler_checkfile">File not found: </string>
    <string name="picturehandler_accessfile">Error accessing file: </string>
    <string name="picturehandler_nosdcard">SDCard is not ready</string>
    <string name="camerapreview_checksurfaceview">surfaceview is not ready</string>
    <string name="camerapreview_checkstopsurfaceview">Error to stop camera preview: </string>
    <string name="camerapreview_checkstartsurfaceview">Error to start camera preview: </string>
    <string name="camerapreview_checkstartpreview">Error preview is not started: </string>
    <string name="camerapreview_checkcreatesurfaceview">Error setting camera preview: </string>
    <string name="mycamera_checkcamera">Error Camera is not found </string>
    <string name="mycamera_checkcameraforusing">Error Camera is not available (in use or does not exist)</string>
    
    <!-- Radio button -->
    <string name="rabtn_danhthiep">Chế độ danh thiếp cá nhân</string>
    <string name="rabtn_thiepmoi">Chế độ thiệp mời</string>
    <string name="rabtn_thuong">Chế độ thường</string>
    
    <!-- Button -->
    <string name="btn_inputimageresult_addcontacts">Lưu Danh Bạ</string>
    <string name="btn_invitationresult_save">Lưu Lịch Hẹn</string>
    <string name="btn_translate">Dịch</string>
    
    
    <!-- ImageView -->
    <string name="iv_imagecrop_btnProcess">Processs image to text</string>
    <string name="iv_imagecrop_btnNext">Rotate right</string>
    <string name="iv_imagecrop_btnBack">Rotate left</string> 
    <string name="iv_custom_image">The main image</string>
    <string name="iv_invitationresult_main">Show image of invitation mode</string>
    
    <!-- EditText -->
    <string name="edt_inputimageresult_result">This is result of OCR</string>
    <string name="edt_inputimageresult_mobile">This is mobile number from result</string>
    <string name="edt_inputimageresult_email">This is email from result</string>
    <string name="edt_inputimageresult_name">This is name from result</string>
    
    <!-- TextView -->
    <string name="tv_phone_number">Số Điện Thoại</string>
    <string name="tv_email">Email</string>
    <string name="tv_name">Họ Tên</string>
    <string name="tv_content">Nội dung</string>
    <string name="tv_time">Thời gian</string>
    <string name="tv_address">Địa điểm</string>  
    <string name="tv_languages">Ngôn ngữ</string>
    <string name="tv_cuochen">Thêm tiêu đề cuộc hẹn</string>
    <string name="tv_baotruoc">Báo trước</string>
    
    <!-- Check Box -->
    <string name="cb_settings_2colorimage">Thiết lập chế độ quét hình trắng đen</string>
    <string name="cb_settings_charfilter">Lọc ký tự cho phép</string>
    
    <!-- Menu -->
    <string name="menu_settings">Cài đặt</string>  
    <string name="menu_about">Thông tin</string>    
    <string name="menu_export">Xuất file</string>
    <string name="menu_camera">Quét camera</string>
    <string name="menu_image">Chọn hình</string>
    
    <!-- Preference -->
    <string-array name="language_items">
        <item>Tiếng Anh</item>
        <item>Tiếng Đức</item>
        <item>Tiếng Hà Lan</item>
        <item>Tiếng Hàn</item>
        <item>Tiếng Indonesia</item>
        <item>Tiếng Italia</item>
        <item>Tiếng Malaysia</item>
        <item>Tiếng Nga</item>
        <item>Tiếng Nhật</item>
        <item>Tiếng Pháp</item>
        <item>Tiếng Tây Ban Nha</item>
        <item>Tiếng Thái</item>
        <item>Tiếng Trung(Phồn thể)</item>
        <item>Tiếng Việt</item>
    </string-array>
    <string-array name="language_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>
    
    <string name="language_prompt">Chọn ngôn ngữ</string>
    <string name="namecardresult_tv_name">Họ tên :</string>
    <string name="namecardresult_edt_name_hint">Nhận dạng tên</string>
    <string name="namecardresult_tv_phone">Điện thoại :</string>
    <string name="namecardresult_tv_email">Email :</string>
    <string name="namecardresult_edt_phone_hint">Điện thoại</string>
    <string name="namecardresult_edt_email_hint">Email</string>
    <string name="namecardresult_btn_add">Thêm danh bạ</string>

</resources>