<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/iv_namecardresult_image"
                android:layout_width="fill_parent"
                android:layout_height="260dp"
                android:src="@drawable/ic_launcher" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/iv_namecardresult_image" >

                <EditText
                    android:id="@+id/edt_namecardresult_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:ems="10"
                    android:hint="@string/namecardresult_edt_name_hint" />

                <TextView
                    android:id="@+id/textView1"
                    style="@style/MyTextView"
                    android:layout_alignBaseline="@+id/edt_namecardresult_name"
                    android:layout_alignBottom="@+id/edt_namecardresult_name"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="26dp"
                    android:text="@string/namecardresult_tv_name" />

                <EditText
                    android:id="@+id/edt_namecardresult_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/edt_namecardresult_name"
                    android:hint="@string/namecardresult_edt_phone_hint" 
                    android:ems="10" >

                </EditText>

                <TextView
                    android:id="@+id/textView2"
                    style="@style/MyTextView"
                    android:layout_alignBaseline="@+id/edt_namecardresult_phone"
                    android:layout_alignBottom="@+id/edt_namecardresult_phone"
                    android:layout_alignLeft="@+id/textView1"
                    android:text="@string/namecardresult_tv_phone" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/MyTextView"
                    android:layout_alignLeft="@+id/textView2"
                    android:layout_centerVertical="true"
                    android:text="@string/namecardresult_tv_email" />

                <EditText
                    android:id="@+id/edt_namecardresult_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView3"
                    android:layout_alignBottom="@+id/textView3"
                    android:layout_alignLeft="@+id/edt_namecardresult_phone"
                    android:hint="@string/namecardresult_edt_email_hint" 
                    android:ems="10" />

                <Button
                    android:id="@+id/btn_namecardresult_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/edt_namecardresult_email"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/namecardresult_btn_add" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</LinearLayout>