<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="horizontal" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_namecardresult_image"
                android:layout_width="fill_parent"
                android:layout_height="260dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_launcher" />

            <View
                android:id="@+id/view1"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="fill_parent"
                android:background="#c6a42d"
                android:layout_height="2dp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true" >

                    <EditText
                        android:id="@+id/edt_namecardresult_name"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:ems="10"
                        android:hint="@string/namecardresult_edt_name_hint" />

                    <TextView
                        android:id="@+id/textView1"
                        style="@style/MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/namecardresult_tv_name" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/relativeLayout2" >

                    <EditText
                        android:id="@+id/edt_namecardresult_phone"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        
                        android:ems="10"
                        android:hint="@string/namecardresult_edt_phone_hint" />

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/namecardresult_tv_phone" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/relativeLayout1" >

                    <EditText
                        android:id="@+id/edt_namecardresult_email"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:ems="10"
                        android:hint="@string/namecardresult_edt_email_hint" />

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/MyTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/edt_namecardresult_email"
                        android:layout_alignBottom="@+id/edt_namecardresult_email"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/namecardresult_tv_email" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/relativeLayout4" >

                    <Button
                        android:id="@+id/btn_namecardresult_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/edt_namecardresult_email"
                        android:layout_marginRight="50dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/namecardresult_btn_add" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>